# search-engine

./: .gitignore  Answers.md  AvlTree.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  Index.cpp  Index.h  Query.cpp  Query.h  README.md  UserInterface.cpp  UserInterface.h  catch_setup.cpp  docsPersist.txt  document.h  hash.h  main.cpp  orgPersist.txt  peoplePersist.txt  porter2_stemmer.cpp  porter2_stemmer.h  testAvlTree.cpp  testIndex.cpp  testQuery.cpp  wordsPersist.txt
